--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             </div>
         </section>
     </main>
-    <footer class="rodape">rodape</footer>
+    <footer class="rodape">Rodos os direitos reservados &copy;2020</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
 
